--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Photos",
   "author": "Lydia Hu",
   "license": "ISC",
-  "main": "index.js",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack -d",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "server": "nodemon server/index.js"
   },
   "dependencies": {
     "express": "^4.16.4",
@@ -19,10 +20,12 @@
     "react-dom": "^16.8.1"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
