--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack -d",
     "react-dev": "webpack -d --watch",
-    "server": "nodemon server/index.js"
+    "server": "nodemon server/index.js",
+    "seed": "node database/seed.js",
+    "postInstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
   },
   "dependencies": {
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
