--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "jquery": "^3.3.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "react": "^16.8.1",
