--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,11 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react",
-  ]
+    ["airbnb"],
+  ],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
