--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^1.6.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
