--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "seed": "node database/seed.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-regular-svg-icons": "^5.7.1",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
