--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "webpack -d",
     "react-dev": "webpack -d --watch",
     "server": "nodemon server/index.js",
-    "seed": "node database/seed.js"
+    "seed": "node database/seed.js",
+    "test": "jest",
+    "test-watch": "jest --watch --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
