--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "server": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "test": "jest",
-    "test-watch": "jest --watch --coverage"
+    "test-watch": "jest --watch --coverage --colors --verbose"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
