Use docker to make containers for service and mysql

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "server": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "test": "jest",
-    "test-watch": "jest --watch --coverage --colors --verbose"
+    "test-watch": "jest --watch --coverage --colors --verbose",
+    "node-server": "node server/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
