--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack -d",
     "react-dev": "webpack -d --watch",
+    "react-prod": "webpack -p",
     "server": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "test": "jest",
