Adds routes and postgress schema

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
+    "pg-format": "^1.0.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "sequelize": "^4.42.0",
