--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "seed": "node database/seed.js",
     "test": "jest",
     "test-watch": "jest --watch --coverage --colors --verbose",
-    "node-server": "node database/seed.js; node server/index.js"
+    "node-server": "node database/seed.js; node server/index.js",
+    "generate-data": "node dataGeneration/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-regular-svg-icons": "^5.7.1",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "bluebird": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
@@ -30,6 +32,8 @@
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
+    "pg": "^7.8.1",
+    "pg-format": "^1.0.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "sequelize": "^4.42.0",
