--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
+    "mongoose": "^5.4.16",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "pg": "^7.8.1",
