--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.4.16",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
+    "newrelic": "^5.6.0",
     "pg": "^7.8.1",
     "pg-format": "^1.0.4",
     "react": "^16.8.1",
